# keyence-microscopy

./: .gitignore  README.md  pyproject.toml  run_keyence_bioio_process_experiment.py  setup.py
keyenceutil/: Stich.py
keyenceutils/: Stich.py  __init__.py  metainfo.py  stich.py
src/keyence_loader/: '  :w  bioio_keyence_builder.py
src/keyence_loader/keyenceutils/: __init__.py  stich.py
test/: test_Stich.py
test/data/: metainfo_sample.xml
test/data/XY01/: Image_XY01_00001_CH1.tif  Image_XY01_00001_CH3.tif  Image_XY01_00002_CH1.tif  Image_XY01_00002_CH3.tif  Image_XY01_00003_CH1.tif  Image_XY01_00003_CH3.tif
