[project]
name = "keyence_loader"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2024.12.30",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "numpy",
    "pytest>=8.3.5",
    "reportlab>=4.3.1",
    "tifffile>=2024.5.22",
    "bioio>=1.3.0",
    "bioio-ome-tiff",
    "tifffile",
    "bioio-tifffile",
    "bioio-ome-tiff",
    "ome-types",
    "xarray",
    "dask[array]",
    "ylabcommon",
    "bioio-ome-zarr>=1.2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["keyence_loader"]

[tool.uv.sources]
#ylabcommon = { git = "https://github.com/ylabjp/ylab-common-scripts" }
#name = "keyenceutils"
ylabcommon = { path = "../YlabCommonScripts/ylab-common-scripts", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock"
]
